# tinywrench-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: cpp_example.cpp  go_api.go  python_api.py  rust_example.rs
include/: api.hpp  playbook.hpp  software_installer.h  software_installer.hpp  system_detector.h
src/: executor.cpp  llm.cpp  main.cpp  playbook.cpp  software_installer.cpp  system_detector.cpp  user_manager.cpp  yaml.cpp
